fix: image width inside card on ie11

--- a/src/styles/jq-memory-game.structure.scss
+++ b/src/styles/jq-memory-game.structure.scss
@@ -13,6 +13,7 @@
         cursor: pointer;
         perspective: 700px;
         img {
+            width: 100%;
             max-width: 100%;
             max-height: 100%;
         }
